@@ -21,6 +21,15 @@
 </tr>
 </table>
 <p>
+2009-09-15  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/svg.c (ENABLE_SVG_WRITER): Disable SVG writer by default
+        since it usually does not work correctly and is unlikely to work
+        correctly any time soon.
+
+</UL>
+<p>
 2009-09-14  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
